--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "de.flerbuster.jobsearcherandroid"
+        applicationId "de.julius.jobsearcherandroid"
         minSdk 21
         targetSdk 32
         versionCode 1
